--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,7 @@
   
   <time datetime={{ .Date.Format "2006-01-02T15:04:05Z0700" }} class="post-date">Published: {{ .Date.Format "Mon, Jan 2, 2006" }}</time>
   {{- if .GitInfo }}
-  <time datetime={{ .Date.Format "2006-01-02T15:04:05Z0700" }} class="post-date">Updated: {{.GitInfo.CommitDate.Format "Mon, Jan 2, 2006" }}</time>
+  <time datetime={{ .Date.Format "2006-01-02T15:04:05Z0700" }} class="post-date">Updated: {{.Page.GitInfo.CommitDate.Format "Mon, Jan 2, 2006" }}</time>
 {{- end }}
   {{ .Content }}
 </div>
