--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,6 +5,7 @@
   <time datetime={{ .Date.Format "2006-01-02T15:04:05Z0700" }} class="post-date">Published: {{ .Date.Format "Mon, Jan 2, 2006" }}</time>
   {{- if .GitInfo }}
   <time class="post-date">Updated: {{.GitInfo.CommitDate.Format "Mon, Jan 2, 2006" }}</time>
+  {{.GitInfo}}
   
 {{- end }}
   {{ .Content }}
