--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,9 +4,9 @@
   
   <time datetime={{ .Date.Format "2006-01-02T15:04:05Z0700" }} class="post-date">Published: {{ .Date.Format "Mon, Jan 2, 2006" }}</time>
   {{- if .GitInfo }}
-  <time class="post-date">Updated: {{.Page.GitInfo.CommitDate.Format "Mon, Jan 2, 2006" }}</time>
-  {{.Page}}
-  {{ .Page.GitInfo.CommitDate }}
+  <time class="post-date">Updated: {{.Page.Lastmod.Format "Mon, Jan 2, 2006" }}</time>
+  {{.Page.Lastmod}}
+  
   
 {{- end }}
   {{ .Content }}
